# xdsl-asl

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci-core.yml  ci-pyright.yml  code-formatting.yml
asl_xdsl/analysis/: integer_range.py
asl_xdsl/dialects/: asl.py  asl_dep.py  dt.py
asl_xdsl/frontend/: ast.py  irgen.py  lexer.py  parser.py  printer.py
asl_xdsl/interpreters/: asl.py
asl_xdsl/tools/: asl_frontend.py  asl_opt.py
asl_xdsl/transforms/: test_integer_range_analysis.py
tests/: test_ast.py
tests/filecheck/: lit.cfg
tests/filecheck/analysis/: test-integer-range-analysis.mlir
tests/filecheck/dialects/asl/: cf.mlir  constant_ops.mlir  func-error.mlir  func.mlir  primitives.mlir  slices.mlir  types_attrs.mlir  types_invalid.mlir
tests/filecheck/dialects/asl_dep/: test.mlir
tests/filecheck/dialects/dt/: test.mlir
tests/filecheck/exec/: exec_simple.asl  t2.mlir
tests/filecheck/frontend/: expr1.asl  irgen_simple.asl
tests/filecheck/tools/: asl_xdsl.mlir
tests/frontend/: test_asl_format.py  test_ast_format.py
